@@ -231,10 +231,6 @@ then
 	# KV may have changed due to the configuration
 	get_KV
 
-	# Compile kernel; If using --genzimage, or building a mips kernel, skip
-	# compile until after initrd/initramfs is done
-	[ "${ENABLE_PEGASOS_HACKS}" != 'yes' -a ${BUILD_INITRAMFS} -eq '0' ] && compile_kernel
-
 	# Compile modules
 	if [ ${BUILD_MODULES} -eq '1' -a ${BUILD_STATIC} -eq '0' ]
 	then
@@ -246,13 +242,6 @@ then
 		print_info 1 "Copying config for successful build to /etc/kernels/kernel-config-${ARCH}-${KV}"
 		[ ! -e '/etc/kernels' ] && mkdir -p /etc/kernels
 		cp "${KERNEL_DIR}/.config" "/etc/kernels/kernel-config-${ARCH}-${KV}"
-	fi
-	if [ "${KERNCACHE}" != "" ]
-	then
-		if [ "${ENABLE_PEGASOS_HACKS}" != 'yes' -a ${BUILD_INITRAMFS} -eq 0 ]
-		then
-			gen_kerncache
-		fi
 	fi
 fi
 
@@ -326,10 +315,8 @@ else
 	print_info 1 'initrd: Not building since only the kernel was requested...'
 fi
 
-# Pegasos fix
-if [ "${ENABLE_PEGASOS_HACKS}" = 'yes' -o ${BUILD_INITRAMFS} -eq 1 ]
+if isTrue "${INTEGRATED_INITRAMFS}" || [ ${BUILD_KERNEL} -eq '1' -a "${KERNCACHE_IS_VALID}" == "0" ]
 then
-	# Compile kernel, intergrating the initrd into it for Pegasos & mips
 	compile_kernel
 
 	# We skipped the kernel build and kerncache generation
